[package]
name = "fdisk-sys"
version = "0.1.0"
authors = ["Nikita Dubrovskii <nikita@linux.ibm.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/IBM/fdisk-sys"
description = "Rust bindings for libfdisk"

[build-dependencies]
bindgen = "^0.51.1"

[lib]
path="lib.rs"

[dependencies]
libc="^0.2.65"
